More documentation and some modifications to Unmodifiable